# bibtex-to-sqlite

./: .envrc  .gitignore  README.org  pyproject.toml
bibtex_to_sqlite/: __main__.py
tests/: test_bibtex_to_sqlite.py
