[tool.poetry]
name = "bibtex-to-sqlite"
version = "0.1.0"
description = ""
authors = ["Graham Voysey <graham@neurala.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dataset = "^1.4.5"
bibtexparser = "^1.2.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
